[package]
edition = "2018"
authors = ["Daniel Egger <daniel@eggers-club.de>"]
categories = [
    "embedded",
    "no-std",
]
description = "Firmware for my MCU power meter based upon STM32F042 and INA260"
documentation = "https://docs.rs/mcumeter"
keywords = [
    "arm",
    "cortex-m",
    "template",
]
license = "0BSD"
name = "mcumeter"
repository = "https://github.com/therealprof/MCUmeter-software"
version = "0.2.0"
readme = "README.md"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
ssd1306 = "0.7"
panic-halt = "0.2"
ina260 = "0.3"
embedded-graphics = "0.7"
heapless = "0.7"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2"

[dependencies.stm32f0xx-hal]
features = ["stm32f042", "rt"]
version = "0.18"

[dependencies.shared-bus]
optional = false
version = "0.2.0-alpha.1"

[dependencies.display-interface]
version = "0.4"

[dependencies.display-interface-i2c]
version = "0.4"

[profile.dev]
debug = true
opt-level = "s"

[profile.release]
debug = true
lto = true
opt-level = "s"
