[package]
edition = "2018"
authors = ["Daniel Egger <daniel@eggers-club.de>"]
categories = [
    "embedded",
    "no-std",
]
description = "Firmware for my MCU power meter based upon STM32F042 and INA260"
documentation = "https://docs.rs/mcumeter"
keywords = [
    "arm",
    "cortex-m",
    "template",
]
license = "0BSD"
name = "mcumeter"
repository = "https://github.com/therealprof/MCUmeter-software"
version = "0.2.0"
readme = "README.md"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
ssd1306 = "0.8"
panic-halt = "1.0"
ina260 = "0.3"
embedded-graphics = "0.8"
heapless = "0.8"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2"

[dependencies.stm32f0xx-hal]
features = ["stm32f042", "rt"]
version = "0.18"

[dependencies.shared-bus]
optional = false
version = "0.3.1"

[profile.dev]
debug = true
opt-level = "s"

[profile.release]
debug = true
lto = true
opt-level = "s"
